--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -11,8 +11,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    position: relative;
-    z-index: 1;
   }
 
   &__control {
@@ -23,7 +21,6 @@
     justify-content: space-between;
     width: 100%;
     cursor: pointer;
-    position: relative;
 
     &--isFocused {
       cursor: default;
@@ -46,7 +43,6 @@
     display: flex;
     height: 100%;
     width: 100%;
-    position: relative;
   }
 
   &__inputContainer {
